2018-06-12  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/fold-vec-load-vec_xl-char.c: New testcase.
	* gcc.target/powerpc/fold-vec-load-vec_xl-double.c: New testcase.
	* gcc.target/powerpc/fold-vec-load-vec_xl-float.c: New testcase.
	* gcc.target/powerpc/fold-vec-load-vec_xl-int.c: New testcase.
	* gcc.target/powerpc/fold-vec-load-vec_xl-longlong.c: New testcase.
	* gcc.target/powerpc/fold-vec-load-vec_xl-short.c: New testcase.

2018-06-12  Martin Liska  <mliska@suse.cz>

	* g++.dg/opt/mpx.C: New test.
	* gcc.target/i386/mpx.c: New test.

2018-06-12  Claudiu Zissulescu  <claziss@synopsys.com>

	* gcc.target/arc/builtin_simdarc.c: Update test.
	* gcc.target/arc/mulsi3_highpart-2.c: Likewise.
	* gcc.target/arc/tumaddsidi4.c: Likewise.

2018-06-12  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/opt72a.ad[sb]: New test.
	* gnat.dg/opt72_pkg.ads: New helper.

2018-06-12  Tom de Vries  <tdevries@suse.de>

	* gcc.dg-selftests/dg-final.exp: New file.

2018-06-11  Paolo Carlini  <paolo.carlini@oracle.com>

	* g++.dg/lookup/new2.C: Test locations too.
	* g++.dg/other/ellipsis1.C: Likewise.
	* g++.dg/other/operator1.C: Likewise.
	* g++.dg/other/operator2.C: Likewise.
	* g++.dg/overload/operator2.C: Likewise.
	* g++.dg/parse/defarg11.C: Likewise.
	* g++.dg/parse/operator4.C: Likewise.
	* g++.dg/template/error30.C: Likewise.
	* g++.dg/template/explicit-args3.C: Likewise.
	* g++.dg/warn/effc1.C: Likewise.
	* g++.old-deja/g++.brendan/prepost2.C: Likewise.
	* g++.old-deja/g++.brendan/prepost3.C: Likewise.
	* g++.old-deja/g++.bugs/900215_01.C: Likewise.
	* g++.old-deja/g++.jason/conversion5.C: Likewise.
	* g++.old-deja/g++.jason/operator.C: Likewise.

2018-06-11  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/86083
	* gcc.dg/strlenopt-44.c: New test.

2018-06-11  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/45521
	* gfortran.dg/generic_32.f90: New test.
	* gfortran.dg/generic_33.f90: New test.

2018-06-11  Carl Love  <cel@us.ibm.com>